--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "animate.css": "^3.5.2",
     "bootstrap": "^4.1.1",
     "ngx-bootstrap": "^3.1.4",
+    "moment": "^2.23.0",
     "core-js": "^2.4.1",
     "echarts": "^3.8.5",
     "font-awesome": "^4.7.0",
