--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "home-tutor-app": {
+    "hansa-app": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/home-tutor-app",
+            "outputPath": "dist/hansa-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -62,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "home-tutor-app:build"
+            "browserTarget": "hansa-app:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "home-tutor-app:build:production"
+              "browserTarget": "hansa-app:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "home-tutor-app:build"
+            "browserTarget": "hansa-app:build"
           }
         },
         "test": {
@@ -115,7 +115,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "home-tutor-app:serve"
+            "devServerTarget": "hansa-app:serve"
           }
         },
         "lint": {
@@ -130,5 +130,5 @@
       }
     }
   },
-  "defaultProject": "home-tutor-app"
+  "defaultProject": "hansa-app"
 }
